compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/typeAliasActualization2.java
@common.pack.ExpectAnnotation()
@common.pack.RegularAnnotation()
public final class ClassToCheck /* common.pack.ClassToCheck*/ {
  public  ClassToCheck();//  .ctor()

  public final void t(@org.jetbrains.annotations.NotNull() common.pack.ExpectClass);//  t(common.pack.ExpectClass)
}
